View queued content (WIP; remaining glitches)